# AlwaysOnAgent

./: README.md
agent/: .gitignore  Makefile  README.md  config.yml  credentials.yml  endpoints.yml  pyproject.toml  test_results.json  test_script.py  test_speechmatics.py
agent/.data/: tickets.json
agent/actions/: actions.py  tickets.py
agent/agentic/: README.md
agent/agentic/flows/: ops_help.yml
agent/agentic/servers/: voice_server.py
agent/agentic/servers/cooksmart_mcp_server/: server.py
agent/agentic/servers/ops_mcp_server/: runbooks.json  server.py
agent/agentic/sub_agents/meal_assistant/: config.yml
agent/agentic/sub_agents/ops_assistant/: config.yml
agent/data/flows/: cooksmart_flows.yml  support_triage.yml  ticket_status.yml
agent/domain/: shared.yml  support_triage.yml  ticket_status.yml
agent/scripts/: verify_setup.py
agent/tests/e2e/: log_support_ticket.yml
agent/voice/: audio_io.py  demo.py  generate_audio.py  rime_service.py  script.py  speechmatics_service.py
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: index.ts
backend/src/config/: env.ts
backend/src/routes/: auth.ts  mcpRoutes.ts  meal.ts  mvpRecipe.ts  redirect.ts  (+1 more)
docs/: 01_mvp_vision.md  02_architecture_design.md  03_mcp_tools_spec.md  04_voice_user_flow.md
frontend/: README.md  metadata.json  package-lock.json  package.json  tsconfig.json
frontend/scripts/: check.ts  check_images.ts  check_more.ts  do.ts  fetch_images.js  inject_i18n.ts  patch.js  seed.ts
frontend/src/: App.tsx  data.ts  i18n.ts  index.css  types.ts
(+32 files in other folders)
