[project]
name = "rasa-coworker-starter"
version = "0.1.0"
description = "Always-On AI Coworker starter — Rasa CALM + voice (Speechmatics, Rime) + Nebius."
requires-python = ">=3.10,<3.12"
dependencies = [
    "rasa-pro~=3.16.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Voice client (Speechmatics ASR/TTS + Rime TTS + playback).
voice = [
    "aiohttp>=3.9.0",
    "pydub>=0.25.1",
    "simpleaudio>=1.0.4",
    "speechmatics-python>=1.11.0",
    "rich>=13.0.0",
]
# Level 2 agentic: the MCP tool server.
mcp = ["fastmcp>=2.11.0"]
dev = ["ruff>=0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions", "voice"]

[tool.ruff]
line-length = 100
target-version = "py310"
